@@ -34,7 +34,7 @@ ifeq ($(MODE),ssl)
 
 LARGS := $(LARGS) -lssl -lcrypto
 
-RT_SOAP_SEC = test_sec_soap xmlt_sec
+RT_SOAP_SEC = test_sec_soap xmlt_sec disp_soap_sec
 RT_STD_SEC = tsgetparam ssp ssback cert ssock2 ssto ssockto sslcfg \
 	huge_response_sec
 
